# portfolio

./: index.html  package-lock.json  package.json  projects.ts  projetos.md  vite.config.ts
.github/workflows/: ci.yml
back/: Dockerfile.api  Dockerfile.celery  Dockerfile.redis  docker-compose.yaml  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
back/control/: celery.pidbox.exchange
back/projects/: projects.py
back/runtime/: contact_rate.json
back/service/: emailService.py
src/: App.tsx  index.css
src/components/: 404.tsx  CardFullScr.tsx  GlassSurface.tsx  HabilityCard.tsx  Loading.tsx  ModelViewer.tsx  PixelTrail.tsx  Selector.tsx  TextType.tsx  techLogo.tsx
src/icons/: tech.ts  ui.ts
src/pages/: InitialPagte.tsx
src/pages/sections/: About.tsx  Contact.tsx  Hability.tsx  Home.tsx  Projects.tsx
